# dwm

./: .gitmodules  CMakeLists.txt  README.md  config.def.h  config.def.h.orig  config.h  config.mk  dwm  dwm.c  dwm.c.orig  dwm.c.rej  patchlist.txt
cmake/: PackagingInstructions.cmake
include/: config.h  dwm.h  layouts.h  movestack.h  types.h
src/: drw.c  dwm.c  layouts.c  movestack.c
submodules/: CMakeLists.txt
